syntax = "proto3";
package gRPC;

option go_package = "github.com/Erickype/GoBonsaiAlbum/gRPC";

//Models
message User{
  int32 id = 1;
  string userName = 2;
  string userLastname = 3;
  string userNickname = 4;
}

//Create user Req and res
message CreateUserReq{
  string userName = 1;
  string userLastname = 2;
  string userNickname = 3;
}
message CreateUserRes{
  int32 id = 1;
}

//GetUsers req and res
message GetUsersReq{
  int32 id = 1;
}
message GetUsersRes{
  User user = 1;
}

//UpdateUser req and res
message UpdateUserReq{
  User user = 1;
}

message  UpdateUserRes{
  bool updated = 1;
  string error = 2;
}

//service users
service ServiceGRPC{
  //CreateUser
  rpc CreateUser(CreateUserReq) returns (CreateUserRes);
  rpc GetUsers(GetUsersReq) returns (stream GetUsersRes);
  rpc UpdateUser(UpdateUserReq) returns (UpdateUserRes);
}
